linux (5.6.4-1~exp2) UNRELEASED; urgency=medium

  * [armhf,arm64] lockdown: Update arm Secure Boot patch for 5.6
    (fixes FTBFS)

 -- Ben Hutchings <benh@debian.org>  Sat, 18 Apr 2020 23:49:45 +0100

linux (5.6.4-1~exp1) experimental; urgency=medium

  * New upstream release: https://kernelnewbies.org/Linux_5.6
  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.6.1
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.6.2
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.6.3
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.6.4

  [ Ben Hutchings ]
  * Set ABI to trunk
  * [mips*] Revert "staging: octeon-usb: delete the octeon usb host controller
    driver"
  * [mips*] Revert "staging: octeon: delete driver"
  * [powerpc*] i2c: Enable I2C_PARPORT instead of I2C_PARPORT_LIGHT
  * aufs: Update support patchset to aufs5.x-rcN 20200302; no functional
    change
  * linux-signed-*: Build-Depend on kernel-wedge 2.102 for consistency
  * aufs: Update support patchset to aufs5.6 20200413; no functional change
  * [rt] Update to 5.6.4-rt3 and re-enable

  [ Aurelien Jarno ]
  * Enable SENSORS_DRIVETEMP
  * [riscv64] Enable SOC_VIRT
  * [riscv64] Enable GPIOLIB, GPIO_SIFIVE, POWER_RESET, POWER_RESET_GPIO,
    POWER_RESET_GPIO_RESTART, POWER_RESET_RESTART, CONFIG_PWM,
    CONFIG_PWM_SIFIVE, CONFIG_SIFIVE_L2

  [ Christian Barcenas ]
  * linux-kbuild: Stop building conmakehash
  * linux-cpupower: Add libcap to Build-Depends and turbostat linker flags
  * [x86] Drop EFI cold boot mitigation patch in favor of upstream
  * [amd64] Update "x86: Make x32 syscall support conditional ..." for 5.6

  [ Romain Perier ]
  * [x86] udeb: Add crc32_pclmul to crc-modules
  * udeb: Add crc32_generic to crc-modules

  [ Luca Boccassi ]
  * lockdown: set default (with Secure Boot) to LOCKDOWN_INTEGRITY_MAX
    (Closes: #956197)

 -- Ben Hutchings <benh@debian.org>  Fri, 17 Apr 2020 01:26:42 +0100
