@@ -5,7 +5,7 @@ Maintainer: Debian Kernel Team <debian-kernel@lists.debian.org>
 Uploaders: Ben Hutchings <ben@decadent.org.uk>
 Standards-Version: 4.1.1
 Build-Depends:
- debhelper (>= 10.1~),
+ debhelper-compat (= 12),
  rsync,
  sbsigntool [amd64 arm64 i386],
  kernel-wedge (>= 2.102~),
