@@ -4,7 +4,7 @@ Maintainer: Debian Kernel Team <debian-kernel@lists.debian.org>
 Uploaders: Bastian Blank <waldi@debian.org>, maximilian attems <maks@debian.org>, Ben Hutchings <benh@debian.org>, Salvatore Bonaccorso <carnil@debian.org>
 Standards-Version: 4.2.0
 Build-Depends:
- debhelper (>= 10.1~), dh-exec,
+ debhelper-compat (= 12), dh-exec,
 # used to run debian/bin/*.py
  python3:any,
 # used by debian/rules.real to prepare the source
