@@ -71,6 +71,7 @@ Description: USB device sharing system over IP network
 Package: hyperv-daemons
 Build-Profiles: <!stage1 !pkg.linux.notools>
 Architecture: i386 amd64 x32
+Pre-Depends: ${misc:Pre-Depends}
 Depends: lsb-base, ${shlibs:Depends}, ${misc:Depends}
 Section: admin
 Description: Support daemons for Linux running on Hyper-V
