@@ -2,6 +2,11 @@ linux (5.6.4-1~exp2) UNRELEASED; urgency=medium
 
   * [armhf,arm64] lockdown: Update arm Secure Boot patch for 5.6
     (fixes FTBFS)
+  * Use debhelper compatibility level 12:
+    - Build-Depend on debhelper-compat and remove debian/compat
+    - hyperv-daemons: Use dh_installsystemd instead of
+      dh_systemd_{enable,start}
+    - hyperv-daemons: Add "Pre-Depends: ${misc:Pre-Depends}"
 
  -- Ben Hutchings <benh@debian.org>  Sat, 18 Apr 2020 23:49:45 +0100
 
